# packetpulse7-dashboard7

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  desktop.ini  docker-compose.yml  start.py  test_ws.py
api/: data_loader.py  main.py
api/routes/: __init__.py  flows.py  sni.py  stats.py  ws.py
dashboard/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  api.js  config.js  index.css  main.jsx
dashboard/src/components/: AIBriefingCard.jsx  AlertsStream.jsx  AppDistributionChart.jsx  AskAnalystChat.jsx  ConnectionBadge.jsx  FlowTable.jsx  FlowsTable.jsx  LiveTrafficChart.jsx  StatsCards.jsx  TrafficChart.jsx
dashboard/src/components/effects/: AlertToast.jsx  CyberCursor.jsx  GlitchText.jsx  NetworkBackground.jsx  Preloader.jsx  ViewportFreezer.jsx
dashboard/src/context/: DPIContext.jsx
dashboard/src/hooks/: useScrollAnimations.js
dashboard/src/lib/: motion.js  poller.js  wsClient.js
dashboard/src/pages/: AlertsPage.jsx  DashboardPage.jsx  FlowsPage.jsx  RulesPage.jsx
dashboard/src/store/: useAppStore.js
demo_api/: main.py  requirements.txt
include/: json_exporter.h
k8s/: README.md  configmap.yaml  namespace.yaml  secrets.yaml
k8s/dashboard/: deployment.yaml  ingress.yaml  service.yaml
k8s/kafka/: kafka-deployment.yaml  kafka-pvc.yaml  kafka-service.yaml  zookeeper-deployment.yaml  zookeeper-pvc.yaml  zookeeper-service.yaml
k8s/postgres/: service.yaml  statefulset.yaml
k8s/redis/: deployment.yaml  service.yaml
k8s/services/api_gateway/: deployment.yaml  hpa.yaml  service.yaml
k8s/services/detection_service/: deployment.yaml  hpa.yaml  service.yaml
k8s/services/packet_service/: deployment.yaml  service.yaml
k8s/services/processing_service/: deployment.yaml  hpa.yaml  service.yaml
services/api_gateway/: Dockerfile  data_loader.py  main.py  mock_data.py  nixpacks.toml  redis_client.py  requirements.txt
services/api_gateway/models/: __init__.py  flows.py  sni.py  stats.py
services/api_gateway/routes/: alerts.py  flows.py  stats.py  ws.py
services/db/: crud.py  models.py  session.py
services/detection_service/: Dockerfile  main.py  rate_limiter.py  requirements.txt
services/packet_service/: CMakeLists.txt  Dockerfile  capture_engine.cpp  capture_engine.h  logger.h  main.cpp  packet_types.h  parser.cpp  parser.h
services/processing_service/: Dockerfile  cache.py  flow_tracker.py  main.py  stats.py
src/cli/: dpi_single_thread_main.cpp
